syntax = "proto3";

package user.proto;

option go_package = "api-service-go/gen;gen";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "role.proto";

message User {
  uint32 ID = 1;
  string email = 2 [(validate.rules).string = {email: true, min_len: 1}];;
  repeated role.proto.Role roles = 3;
}

message Users {
  repeated User users = 1;
}

message GetUser {
  int32 ID = 1;
}

message GetUsers {
}

message DeleteUser {
  int32 ID = 1;
}


service UserService {
  rpc Add(User) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  rpc Edit(User) returns (User) {
    option (google.api.http) = {
      put: "/api/v1/users/{ID}"
      body: "*"
    };
  }
  rpc Get(GetUser) returns (User) {
    option (google.api.http) = {
      get: "/api/v1/users/{ID}"
    };
  }
  rpc GetAll(GetUsers) returns (Users) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
  rpc Delete(DeleteUser) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/users/{ID}"
    };
  }
}